edit file strucure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- css -->
-    <link href="./output.css" rel="stylesheet" />
+    <link href="src//output.css" rel="stylesheet" />
   </head>
   <body>
     <!--Navbar  -->
@@ -295,6 +295,6 @@
       </p>
     </div>
     <!-- copyrights -->
-    <script src="js/main.js"></script>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
