edit path and config file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- css -->
-    <link href="src//output.css" rel="stylesheet" />
+    <link href="css/output.css" rel="stylesheet" />
   </head>
   <body>
     <!--Navbar  -->
@@ -33,7 +33,7 @@
           <i class="fa-solid fa-film font-bold text-primary text-2xl"></i>
           Movies
         </a>
-        <div id="menu-icon" class="block md:hidden text-2xl">
+        <div id="menu-icon" class="block md:hidden text-2xl cursor-pointer">
           <i class="fa-solid fa-bars"></i>
         </div>
         <!-- menu -->
@@ -58,7 +58,7 @@
     <!-- Home -->
     <section
       id="home"
-      class="home bg-[url('img/home3.jpg')] bg-[cover] bg-[center] h-screen flex items-center justify-start z-0"
+      class="home bg-[url('/img/home3.jpg')] bg-[cover] bg-[center] h-screen flex items-center justify-start z-0"
     >
       <div class="container">
         <span class="uppercase tracking-wide font-semibold"
@@ -295,6 +295,6 @@
       </p>
     </div>
     <!-- copyrights -->
-    <script src="src/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
