edit background image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Home -->
     <section
       id="home"
-      class="bg-[url('/img/home3.jpg')] bg-[cover] bg-[center] h-screen flex items-center justify-start z-0"
+      class="bg-[cover] bg-[center] h-screen flex items-center justify-start z-0"
     >
       <div class="container">
         <span class="uppercase tracking-wide font-semibold"
