--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
         Newsletter
       </h2>
       <form
-        class="bg-white p-2 rounded-lg mt-5 max-w-[500px] mx-auto flex items-center justify-between"
+        class="bg-white p-2 rounded-lg mt-5 max-w-[300px] sm:max-w-[500px] mx-auto flex items-center justify-between"
       >
         <input
-          class="outline-none text-black"
+          class="outline-none text-black w-[100px] sm:w-[250px] px-2 py-2 sm:px-5 sm:py-3"
           type="email"
           placeholder="Enter Email..."
         />
         <input
           type="submit"
           value="Subscribe"
-          class="bg-primary text-white px-5 py-3 rounded-lg"
+          class="bg-primary text-white px-2 py-2 sm:px-5 sm:py-3 rounded-lg"
         />
       </form>
     </section>
